cmake_minimum_required(VERSION 3.6)
project(CalibratePlugin)

set(CMAKE_CXX_STANDARD 11)
set(OpenCV_DIR "/usr/local/opt/opencv3/share/OpenCV")
FIND_PACKAGE(OpenCV REQUIRED)
set(SOURCE_FILES library.cpp library.h)
add_library(CalibratePlugin MODULE ${SOURCE_FILES})
set_target_properties(CalibratePlugin PROPERTIES BUNDLE TRUE)
 target_link_libraries(CalibratePlugin ${OpenCV_LIBS})
add_executable(Question Question.cpp)
target_link_libraries(Question ${OpenCV_LIBS})
ADD_CUSTOM_COMMAND(TARGET CalibratePlugin POST_BUILD COMMAND cp -r ./CalibratePlugin.bundle ../../../Assets/Plugins/ )
ADD_CUSTOM_COMMAND(TARGET CalibratePlugin POST_BUILD COMMAND pwd)